--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@ $(function () {
 		header: {
 			left: 'prev,next today',
 			center: 'title',
-			right: 'month,agendaWeek,agendaDay'
+			right: 'month,basicWeek'
 		},
 		editable: false,
 		events: '/events/json'
