--- a/views/add.html
+++ b/views/add.html
@@ -123,6 +123,6 @@
 </div>
 <p>
 	<input type="submit" value="Add Event" class="autosave-clear" />&nbsp;
-	<a href="javascript:history.go(-1)" onclick="return confirm ('Are you sure you want to cancel and lose any changes?')">Cancel</a>
+	<a href="javascript:history.go(-1)" onclick="return $.cancel_autosave ('Are you sure you want to cancel and lose any changes?')">Cancel</a>
 </p>
 </form>
