--- a/views/admin.html
+++ b/views/admin.html
@@ -1,4 +1,8 @@
-<p><a href="/events/add">{"Add Event"}</a></p>
+<p>
+	<a href="/events/add">{"Add Event"}</a>
+	&nbsp;|&nbsp;
+	<a href="/events">{"View Calendar"}</a>
+</p>
 
 {% if offset > 0 %}
 <p class="previous"><a href="/events/admin?offset={{ prev }}">&laquo; {"Previous"}</a></p>
@@ -21,7 +25,7 @@
 			{% if loop_value->locked %}
 			{"Editing Locked"}
 			{% else %}
-			<a href="/events/edit?id={{ loop_value->id }}">{"Edit"}</a> | <a href="/events/delete?id={{ loop_value->id }}" onclick="return confirm ('{"Are you sure you want to delete this event?"}');">{"Delete"}</a>
+			<a href="/events/edit?id={{ loop_value->id }}">{"Edit"}</a> | <a href="/events/delete" data-id="{{ loop_value->id }}" onclick="return $.confirm_and_post (this, '{"Are you sure you want to delete this event?"}');">{"Delete"}</a>
 			{% end %}
 		</td>
 	</tr>
