Added settings form

--- a/views/admin.html
+++ b/views/admin.html
@@ -1,6 +1,8 @@
 <p>
 	<a href="/events/add">{"Add Event"}</a>
 	&nbsp;|&nbsp;
+	<a href="/events/settings">{"Settings"}</a>
+	&nbsp;|&nbsp;
 	<a href="/events">{"View Calendar"}</a>
 </p>
 
