--- a/views/settings.html
+++ b/views/settings.html
@@ -23,6 +23,15 @@
 <p>{"Google Calendar XML feed (optional)"}:<br />
 <input type="text" name="gcal_link" size="40" value="{{ gcal_link|quotes }}" /></p>
 
+<p>{"Payment handler"}:<br />
+<select name="payment_handler">
+	<option value="">{"None"}</option>
+	{% foreach payment_handlers %}
+	<option value="{{loop_index}}"{% if payment_handler == $data->loop_index %} selected{% end %}>{{loop_value|__}}</option>
+	{% end %}
+</select>
+</p>
+
 <p>
 	<input type="submit" value="{"Save Settings"}" />
 	&nbsp;
