Registration for free events is working

--- a/views/register.html
+++ b/views/register.html
@@ -61,7 +61,8 @@ $(function () {
 		strings: {
 			reserved_error: "{"Unable to make a reservation at this time. Please try again later."}",
 			attendees_error: "{"Please enter the names of each of the guests to continue."}",
-			updated_error: "{"An unexpected error occurred. Please try again later."}"
+			updated_error: "{"An unexpected error occurred. Please try again later."}",
+			completed_error: "{"An unexpected error occurred. Please try again later."}"
 		}
 	});
 });
