Event checkout payment integration working

--- a/views/email/confirmation.html
+++ b/views/email/confirmation.html
@@ -26,7 +26,7 @@ Company: {{ company }}
 {% end %}
 {% if payment_id != 0 %}
 
-Order number:  Yo{{ payment_id }} 
+Order number:  {{ payment_id }} 
 Placed:        {{ ts|I18n::date_time|strip_tags }} 
 Fee per guest: ${{ event->price|number_format (%s, 2) }} 
 Guests:        {{ num_attendees }} 
