--- a/views/registered.html
+++ b/views/registered.html
@@ -9,7 +9,7 @@
 	{{ event->address }}{% if event->city != '' %}, {{ event->city }}{% end %}
 </p>
 
-<p>{{ num_attendees}} {"Guests:"}</p>
+<p>{{ num_attendees}} {"Guests"}:</p>
 
 <ul>
 {% foreach attendees as attendee %}
