Added guests column to admin screen

--- a/views/admin.html
+++ b/views/admin.html
@@ -13,9 +13,10 @@
 <p>
 <table width="100%">
 	<tr>
-		<th width="30%">{"Title"}</th>
-		<th width="37%">{"Date"}</th>
-		<th width="18%">{"Time"}</th>
+		<th width="25%">{"Title"}</th>
+		<th width="30%">{"Date"}</th>
+		<th width="15%">{"Time"}</th>
+		<th width="15%">{"Guests"}</th>
 		<th width="15%">&nbsp;</th>
 	</tr>
 {% foreach events %}
@@ -23,6 +24,7 @@
 		<td><a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}" target="_blank">{{ loop_value->title }}</a></td>
 		<td>{{ loop_value->start_date|events_filter_date }}{% if loop_value->end_date %} - {{ loop_value->end_date|events_filter_date }}{% end %}</td>
 		<td>{{ loop_value->starts|events_filter_time }}{% if loop_value->ends != '00:00:00' %} - {{ loop_value->ends|events_filter_time }}{% end %}</td>
+		<td>...</td>
 		<td style="text-align: right">
 			{% if loop_value->locked %}
 			{"Editing Locked"}
