--- a/views/event.html
+++ b/views/event.html
@@ -1,10 +1,18 @@
 <p>
 	<a href="/events">&laquo; {"All Events"}</a>
-	{% if User::is_valid () && User::is ('admin') %}
-	&nbsp;|&nbsp;
-	<a href="/events/edit?id={{id}}">{"Edit Event"}</a>
-	&nbsp;|&nbsp;
-	<a href="/events/delete" data-id="{{id}}" onclick="return $.confirm_and_post (this, '{"Are you sure you want to delete this event?"}');">{"Delete Event"}</a>
+	{% if User::is_valid () %}
+		{% if User::require_acl ('admin', 'events') %}
+			&nbsp;|&nbsp;
+			<a href="/events/guests?id={{id}}">{"Guests"}</a>
+		{% end %}
+		{% if User::require_acl ('admin', 'admin/edit', 'events') %}
+			&nbsp;|&nbsp;
+			<a href="/events/edit?id={{id}}">{"Edit Event"}</a>
+		{% end %}
+		{% if User::require_acl ('admin', 'admin/delete', 'events') %}
+			&nbsp;|&nbsp;
+			<a href="/events/delete" data-id="{{id}}" onclick="return $.confirm_and_post (this, '{"Are you sure you want to delete this event?"}');">{"Delete Event"}</a>
+		{% end %}
 	{% end %}
 </p>
 
