--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@ $(function () {
 	});
 });
 </script>
-{% if User::is_valid () && User::is ('admin') %}
+{% if User::require_acl ('admin', 'admin/add', 'events') %}
 <p><a href="/events/add">{"Add Event"}</a></p>
 {% end %}
 <div id="events-calendar"></div>
