--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@ $(function () {
 			right: 'month,basicWeek'
 		},
 		editable: false,
+		lang: '{{i18n.language}}',
 		{% if gcal_link %}
 		eventSources: [
 			'/events/json',
