Changed events/sidebar date styles to be i18n-compatible and match the blog/headlines output

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -1,5 +1,7 @@
+{! admin/util/dates !}
+
 <ul>
 {% foreach events %}
-	<li><a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">{{ loop_value->start_date|events_filter_shortdate }} - {{ loop_value->title }}</a></li>
+	<li>{{ loop_value->start_date|I18n::short_date }} - <a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">{{ loop_value->title }}</a></li>
 {% end %}
 </ul>
