--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -2,6 +2,6 @@
 
 <ul>
 {% foreach events %}
-	<li>{{ loop_value->start_date|I18n::short_date }} - <a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">{{ loop_value->title }}</a></li>
+	<li>{{ loop_value->date|I18n::short_date }} - <a href="/events/{{ loop_value->id }}/{{ loop_value->title|URLify::filter }}">{{ loop_value->title }}</a></li>
 {% end %}
 </ul>
