--- a/views/checkout.html
+++ b/views/checkout.html
@@ -1,6 +1,6 @@
 <p>
-	{{ start_date|I18n::date|strip_tags }}{% if end_date %} - {{ end_date|I18n::date|strip_tags }}{% end %}
-	{{ starts|I18n::time|strip_tags }}{% if ends != '00:00:00' %} - {{ ends|I18n::time|strip_tags }}{% end %}<br />
+	{{ start_date|events\Filter::date|strip_tags }}{% if end_date %} - {{ end_date|events\Filter::date|strip_tags }}{% end %}
+	{{ starts|events\Filter::time|strip_tags }}{% if ends != '00:00:00' %} - {{ ends|events\Filter::time|strip_tags }}{% end %}<br />
 
 	{{ address }}{% if city != '' %}, {{ city }}{% end %}
 </p>
