--- a/views/registered.html
+++ b/views/registered.html
@@ -3,8 +3,8 @@
 <p>
 	<strong><a href="/events/{{ event->id }}/{{ event->title|URLify::filter }}">{{ event->title }}</a></strong><br />
 
-	{{ event->start_date|I18n::date|strip_tags }}{% if event->end_date %} - {{ event->end_date|I18n::date|strip_tags }}{% end %}
-	{{ event->starts|I18n::time|strip_tags }}{% if event->ends != '00:00:00' %} - {{ event->ends|I18n::time|strip_tags }}{% end %}<br />
+	{{ event->start_date|events\Filter::date|strip_tags }}{% if event->end_date %} - {{ event->end_date|events\Filter::date|strip_tags }}{% end %}
+	{{ event->starts|events\Filter::time|strip_tags }}{% if event->ends != '00:00:00' %} - {{ event->ends|events\Filter::time|strip_tags }}{% end %}<br />
 
 	{{ event->address }}{% if event->city != '' %}, {{ event->city }}{% end %}
 </p>
