Added event previews

--- a/views/add.html
+++ b/views/add.html
@@ -132,6 +132,7 @@
 </div>
 <p>
 	<input type="submit" value="Add Event" class="autosave-clear" />&nbsp;
+	<input type="submit" value="{"Preview"}" onclick="return webpage_preview (this.form)" />&nbsp;
 	<a href="javascript:history.go(-1)" onclick="return $.cancel_autosave ('{'Are you sure you want to cancel and lose any changes?'}')">{"Cancel"}</a>
 </p>
 </form>
