--- a/views/add/head.html
+++ b/views/add/head.html
@@ -52,4 +52,16 @@ function webpage_show_extra_options (link) {
 	}
 	return false;
 }
+function webpage_preview (f) {
+	var t = f.target,
+		a = f.action;
+
+	f.target = 'elefant-preview';
+	f.action = '/events/preview';
+	f.submit ();
+
+	f.target = t;
+	f.action = a;
+	return false;
+}
 </script>
