--- a/views/edit.html
+++ b/views/edit.html
@@ -133,6 +133,7 @@
 <p>
 	<input type="submit" value="Save Event" class="autosave-clear" />&nbsp;
 	<input type="submit" value="Save &amp; Keep Editing" id="bgsave" />&nbsp;
+	<input type="submit" value="{"Preview"}" onclick="return webpage_preview (this.form)" />&nbsp;
 	<a href="/admin/cancel?type=Event&id={{ id }}&return={{ $_SERVER['HTTP_REFERER']|urlencode }}" onclick="return $.cancel_autosave ('Are you sure you want to cancel and lose any changes?')">Cancel</a>&nbsp;
 	<span id="bgsave-status"></span>
 </p>
