--- a/views/settings.html
+++ b/views/settings.html
@@ -8,15 +8,15 @@
 
 <p>{"Calendar page layout"}:<br />
 <select name="layout">
-{% foreach layouts %}
-	<option value="{{ loop_value }}"{% if loop_value == $data->layout %} selected{% end %}>{{ loop_value|ucfirst }}</option>
+{% foreach admin\Layout::options () as _layout, _name %}
+	<option value="{{ _layout }}"{% if _layout == $data->layout %} selected{% end %}>{{ _name }}</option>
 {% end %}
 </select></p>
 
 <p>{"Event page layout"}:<br />
 <select name="event_layout">
-{% foreach layouts %}
-	<option value="{{ loop_value }}"{% if loop_value == $data->event_layout %} selected{% end %}>{{ loop_value|ucfirst }}</option>
+{% foreach admin\Layout::options () as _layout, _name %}
+	<option value="{{ _layout }}"{% if _layout == $data->event_layout %} selected{% end %}>{{ _name }}</option>
 {% end %}
 </select></p>
 
